# figlet4win-old

./: .gitignore  CMakeLists.txt  LICENSE.txt  chkfont.c  figinstall.c  figinstall.cpp  figlet.c  figlist.bat  figman.bat  find_mingw_libgcc_s_seh.py  find_mingw_libstdc++.py  showfigfonts.bat  utf8.c  wix-patch.xml
.github/workflows/: CMAKE_WINS2019.yml  CMAKE_WINS2022.yml  RELEASE.yml
chm/: Basic_Definitions_and_Concepts.htm  Chart_of_Capabilities.htm  Control_Files.htm  Copyright.htm  Creating_FIGfonts.htm  FIGcharacter_Data.htm  FIGfont.htm  FIGlet4Win.wcp  FIGlet4Win_2.2.5_Documentation.htm  FIGlet4Win_Components.htm  FIGlet_Font_Format.htm  Introduction.htm  License.htm  Notes_-_Avoiding_Errors_and_General_Advice.htm  Standardized_Capabilities_of_Current_and_Future_FIGdrivers.htm  What's_FIGlet_and_FIGlet4Win.htm  chkfont.exe.htm  figinstall.exe.htm  figlet.exe.htm  figlist.bat.htm  showfigfonts.bat.htm
chm/template2/: fixedtop.htm
doc/: figlet4win.chm
fonts/: CMakeLists.txt
tests/: CMakeLists.txt  cleanup.py  preparation.py  test_centerjustification.py  test_flushleftjustification.py  test_flushrightjustification.py  test_fullwidthflushrightrighttoleftmode.py  test_fullwidthmode.py  test_jis0201controlfile.py  test_kerningcenteredrighttoleftmodeslant.py  test_kerningflushleftrighttoleftmode.py  test_kerningmode.py  test_kerningparagraphcenteredmodesmall.py  test_lefttorighttext.py  test_longtextrendering.py  test_overlapflushrightmodebig.py  test_overlapmode.py  test_paragraphmodelonglineoutput.py  test_righttoleftsmushingwithjavefont.py  test_righttolefttext.py  test_shortlineoutput.py  test_showfigfonts.py  test_showfigfonts_res.txt  test_textrendering.py  test_tlf2fontrendering.py  test_tlf2fullwidthflushleftrighttoleftmode.py  test_tlf2kerningflushrightmode.py  test_tlf2overlapcenteredmode.py  test_uskatacontrolfile.py
tests/testbase/: testbase.py
